fix inputs width on small monitor

--- a/src/app/components/add-category/add-category.component.scss
+++ b/src/app/components/add-category/add-category.component.scss
@@ -3,10 +3,6 @@
   flex-direction: column;
 }
 
-.form-field {
-  width: 50%;
-}
-
 .invalid-feedback {
   color: red;
   font-size: 12px;
