--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,5 +1,5 @@
 .register {
-  width: 20%;
+  width: 210px;
   margin: auto;
   margin-top: 10%;
   display: flex;
